<resources>
    <string name="app_name">The Movie DB - ShowCase App</string>
    <string name="app_version">v1.1.0</string>
    <string name="dev_name">Armando Rochin</string>
    <string name="dev_job">Android developer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summary">Sinopsis</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="estreno">Estreno</string>
    <string name="more">Ver Todo</string>
    <string name="discover">Descubrir</string>
    <string name="nowplaying">En Cartelera</string>
    <string name="toprated">Más Valoradas</string>
    <string name="popular">Próximos estrenos</string>
    <string name="detail">Detalle</string>
    <string name="about_title">Acerca De</string>
    <string name="about">Aplicacion de ejemplo para mostrar la implementacion de Kotlin, MVVM, Clean Architecture, Paginación, Dagger Hilt, Corutinas, Room database, Retrofit, databinding, livedata, material design, animaciones, espresso y test unitarios.\n\nPuedes encontrar el codigo fuente en mi cuenta de github, haciendo click en el boton de arriba.\n\n<a href="https://www.app-privacy-policy.com/live.php?token=nu48uNjNyw3VgZvEm4Nvce2uj3QRStZj"><font color="#4CAF50">Politica de privacidad</font></a></string>
    <string name="voteaverage_append">/10</string>
</resources>