<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageView
        android:id="@+id/details_backdrop"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/details_poster"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginTop="160dp"
        android:layout_marginStart="@dimen/padding_normal"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        tools:text="@string/app_name"
        android:layout_marginTop="@dimen/padding_normal"
        android:layout_marginStart="@dimen/padding_normal"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toEndOf="@id/details_poster"
        app:layout_constraintTop_toBottomOf="@id/details_backdrop"/>

    <TextView
        android:id="@+id/details_release_date"
        style="@style/TmdbMargin.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_poster"
        tools:text="Release Date: 21-11-2022"/>

    <TextView
        android:id="@+id/details_vote_average"
        style="@style/TmdbMargin.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_release_date"
        tools:text="8.23/10"/>

    <TextView
        android:id="@+id/summary_label"
        style="@style/TmdbMargin.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details_vote_average"/>

    <TextView
        android:id="@+id/summary"
        style="@style/TmdbMargin.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/summary_label"
        tools:text="@string/lorem"/>

</androidx.constraintlayout.widget.ConstraintLayout>